	* When getting info on a domain-only (server) JID, show uptime
	  (when given by the result of the "last query") and don't show status as
	  offline.
	* Wrap XHTML messages in <p>, as described in XEP-0071, for compatibility
	  with some clients.
	* Don't do an SRV lookup for a STUN server associated with the account
	  if one is already set globally in prefs.

	Yahoo:
	* Don't send <span> and </span> tags.  (Fartash Faghri)

	Pidgin:
	* Correctly size conversation and status box entries when the
	  interior-focus style property is diabled. (Gabriel Schulhof)
	* Correctly handle a multiline text field being required in a
	  request form.  (Thanks to Florian Zeitz for finding this problem)
	* Search friends by email-addresses in the buddy list. (Luoh Ren-Shan)

	Finch:
	* Rebindable 'move-first' and 'move-last' actions for tree widgets. So
	  it is possible to jump to the first or last entry in the buddy list
	  (and other such lists) by pressing home or end key (defaults)
	  respectively.

version 2.6.5 (01/08/2010):
	libpurple:
	* TLS certificates are actually stored to the local cache once again
	  (accepting a name mismatch on a certificate should now be remembered)

	General:
	* Build-time fixes for Solaris.  (Paul Townsend)

	AIM and ICQ:
	* Messages from some mobile clients are no longer displayed as
	  Chinese characters (broken in 2.6.4)

	MSN:
	* Fix an issue allowing a remote user to download arbitrary files from
	  a libpurple client.  (CVE-2010-0013)

	XMPP:
	* Do not crash when attempting to register for a new account on Windows.
	* Fix file transfer with clients that do not support Entity Capabilities
	  (e.g. Spark)

version 2.6.4 (11/29/2009):
	libpurple:
	* Actually emit the hold signal for media calls.
	* Fix building the GnuTLS plugin with older versions of GnuTLS.
	* Fix DNS TXT query resolution.
	* Don't send Proxy-Authorization headers to HTTP proxy servers until we've